--- a/hw2/Makefile
+++ b/hw2/Makefile
@@ -1,22 +1,22 @@
 #The following macros should be defined. 
-TARGET1=big_judge 
-TARGET2=judge
-TARGET3=player 
-OBJECT1=big_judge.o
-OBJECT2=judge.o
-OBJECT3=player.o
+OBJECT1=big_judge
+OBJECT2=judge
+OBJECT3=player
 CC=gcc
 LD=g++
-LD_FLAGS=
+#LD_FLAGS=
 #C_FLAGS= -g -O0
 C_FLAGS=
 # end of user configuration
 #
-ALL : $(TARGET1) 
- $(TARGET1) : $(OBJECT1) $(OBJECT2) $(OBJECT3)
-	$(LD) $^ $(LD_FLAGS) -o $@
-%.o : %.c
-	$(CC) $(C_FLAGS) -c $<
+ALL : big_judge judge player
+
+big_judge: 
+	$(CC) $(C_FLAGS) big_judge.c -o $(OBJECT1)
+judge: 
+	$(CC) $(C_FLAGS) judge.c -o $(OBJECT2)
+player: 
+	$(CC) $(C_FLAGS) player.c -o $(OBJECT3)
 .PHONY: clean
 clean :
 	-rm -f $(OBJECT1) $(OBJECT2) $(OBJECT3)
